--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "astro": "4.15.7",
     "astro-robots-txt": "1.0.0",
     "tailwindcss": "3.4.1",
-    "typescript": "5.3.3"
+    "typescript": "5.3.3",
+    "vercel": "^37.4.2"
   }
 }
