--- a/package.json
+++ b/package.json
@@ -11,13 +11,20 @@
   },
   "dependencies": {
     "@astrojs/check": "0.5.6",
+    "@astrojs/react": "^3.6.2",
     "@astrojs/tailwind": "5.1.0",
     "@astrojs/vercel": "^7.8.1",
     "@fontsource-variable/onest": "5.0.2",
     "astro": "4.15.7",
     "astro-robots-txt": "1.0.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "tailwindcss": "3.4.1",
     "typescript": "5.3.3",
     "vercel": "^37.4.2"
+  },
+  "devDependencies": {
+    "@types/react": "^18.3.11",
+    "@types/react-dom": "^18.3.1"
   }
 }
