--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "@astrojs/react": "^3.6.2",
     "@astrojs/tailwind": "5.1.0",
     "@astrojs/vercel": "^7.8.1",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
     "@fontsource-variable/onest": "5.0.2",
+    "@mui/material": "^6.1.3",
     "astro": "4.15.7",
     "astro-robots-txt": "1.0.0",
     "react": "^18.3.1",
