--- a/package.json
+++ b/package.json
@@ -17,14 +17,17 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@fontsource-variable/onest": "5.0.2",
-    "@mui/material": "^6.1.3",
+    "@mui/material": "^6.1.4",
+    "@types/styled-components": "^5.1.34",
     "astro": "4.15.7",
     "astro-robots-txt": "1.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "styled-components": "^6.1.13",
     "tailwindcss": "3.4.1",
     "typescript": "5.3.3",
-    "vercel": "^37.4.2"
+    "vercel": "^37.8.0",
+    "vite-plugin-ssr": "^0.4.142"
   },
   "devDependencies": {
     "@types/react": "^18.3.11",
